# DS_wet2

./: .gitignore  AVLtree.h  CMakeLists.txt  DynamicArray.h  GroupType.h  GroupsTreeId.cpp  GroupsTreeId.h  GroupsTreeMotivation.cpp  GroupsTreeMotivation.h  HashTable.h  Racenion26b2.cpp  Racenion26b2.h  StructsDef.h  TeamsTreeId.cpp  TeamsTreeId.h  TeamsTreeMotivation.cpp  TeamsTreeMotivation.h  UnionFind.h  contestantsArray.cpp  contestantsArray.h  dont_include.txt  main26b2.cpp  readme.txt  run_tests.py  wet2util.h
tests/: test18.in  test18.out  test3.in  test3.out  test31.in  test31.out  test42.in  test42.out  test7.in  test7.out
